Adjusted header grid sections and spacing. Changed .main from subgrid to own grid. The subgrid property seemed to create issues related to .main size at different heights. Header for .card-wrapper is now directly included in .card-wrapper section. This creates a uniform appearance that is symmetrical with the elements of .side-card-wrapper.

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
     grid-area: 1 / 2 / 2 / -1;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    gap: calc(10px + 1vw) 0px;
 }
 div#top {
     grid-area: 1 / 1 / 2 / -1;
@@ -56,12 +57,12 @@ div#bottom {
     grid-area: 2 / 1 / 3 / -1;
     display: grid;
     grid-auto-flow: column;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1.5fr repeat(2, 1fr);
     grid-template-rows: min-content;
 
     #bottom-left {
         display: grid;
-        grid-template-columns: 0.50fr repeat(2, 1fr);
+        grid-template-columns: 0.50fr 1fr;
         p {
             font-weight: 500;
         }
@@ -119,10 +120,10 @@ main {
     background-color: var(--bg-theme2);
     padding: var(--default-pad);
     box-shadow: inset 0px 9px 10px -13px #000000a2;
+    /* min-height: 100vh; */
     grid-area: 2 / 2 / -1 / -1;
     display: grid;
-    grid-template-columns: subgrid;
-    grid-template-rows: 2em 1fr;
+    grid-template-columns: 3fr minmax(auto, 1fr);
     grid-auto-flow: column;
 }
 
@@ -140,8 +141,13 @@ main {
     padding: var(--default-pad);
     display: grid;
     gap: 15px;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     grid-auto-rows: max-content;
+
+    h3 {
+        grid-row: 1/2;
+        grid-column: 1/-1;
+    }
 
     article {
         background: #ff0000;
@@ -154,12 +160,17 @@ main {
     }
 }
 .side-cards-wrapper {
+    padding: var(--default-pad);
+    grid-column: -1/-2;
     display: grid;
     gap: 15px;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: auto 1fr auto 1fr;
 
     p {
         font-size: 0.75rem;
+    }
+    h3 {
+        padding-top: 0px;
     }
 }
 
